--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -177,6 +177,23 @@ services:
       networks:
         - backend
 
+### Horizon ###############################################
+    horizon:
+      build:
+        context: ./horizon
+        args:
+          - PHP_VERSION=${PHP_VERSION}
+          - INSTALL_PGSQL=${PHP_WORKER_INSTALL_PGSQL}
+      volumes:
+        - ${APP_CODE_PATH_HOST}:${APP_CODE_PATH_CONTAINER}
+        - ./horizon/supervisord.d:/etc/supervisord.d
+      depends_on:
+        - workspace
+      extra_hosts:
+        - "dockerhost:${DOCKER_HOST_IP}"
+      networks:
+        - backend
+
 ### NGINX Server #########################################
     nginx:
       build:
